<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fileNameTextView"
                    style="@style/response_filename_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/file_info_filename_default"
                    android:paddingTop="32dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />

                <TextView
                    android:id="@+id/selectedTextLabel"
                    style="@style/response_label_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/response_selected_text_label"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />

                <TextView
                    android:id="@+id/selectionTextView"
                    style="@style/response_selected_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/response_selected_text_default"
                    android:paddingTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />

                <TextView
                    android:id="@+id/responseLabel"
                    style="@style/response_label_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/response_ai_response_label"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />

                <TextView
                    android:id="@+id/responseTextView"
                    style="@style/response_ai_response_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/response_ai_response_default"
                    android:paddingTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>