<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:id="@+id/response_card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/responseRecyclerParent">

        <TextView
            android:id="@+id/response_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_info_filename_default"
            android:layout_marginStart="15dp"
            style="@style/NameTextStyle"
            android:ellipsize="middle"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/response_selected_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/response_file_name"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/response_selected_text_default"
            style="@style/DetailsTextStyle"
            android:maxLines="3"/>

        <TextView
            android:id="@+id/gpt_response"
            style="@style/DetailsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/response_selected_text"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:text="@string/response_ai_response_default" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>